hphp/hack/test/typecheck/reactive/parse_multiple1.php.exp
File "parse_multiple1.php", line 4, characters 3-22:
Multiple __Rx, __RxShallow, or __RxLocal annotations are not allowed. (Parsing[1002])
